<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.dailymedicine.MainActivity">

    <item
        android:id="@+id/action_details"
        android:background="?android:attr/selectableItemBackground"
        android:orderInCategory="100"
        android:title="@string/action_details" />
    <item
        android:id="@+id/action_edit"
        android:background="?android:attr/selectableItemBackground"
        android:orderInCategory="100"
        android:title="@string/action_edit" />
    <item
        android:id="@+id/action_delete"
        android:background="?android:attr/selectableItemBackground"
        android:orderInCategory="100"
        android:title="@string/action_delete" />

</menu>
